# DTW-approx

./: .gitignore  .try.cpp.swp  CMakeCache.txt  CMakeCache.txt.bak  CMakeCache.txt.bak1  CMakeLists.txt  CTestTestfile.cmake  FrechetDecider.cpp  FrechetDecider.h  KdTreeWSPD.cpp  KdTreeWSPD.h  LICENSE  Makefile  QuadTree.cpp  QuadTree.h  QuadTreeTwoClasses.cpp  QuadTreeTwoClasses.h  README.md  Sampling.cpp  Sampling.h  WSPD.cpp  WSPD.h  cmake_install.cmake  curve.h  curve_registration.cpp  debug.h  driver_curve_registration.sh  executable.exe.stackdump  frechet.cpp  frechet.h  gen_curves.sh  gen_tests  gen_tests.cpp  grid.cpp  grid.h  icp.cpp  icp.h  main.cpp  naive_dtw.cpp  naive_dtw.h  (+11 more)
Testing/Temporary/: CTestCostData.txt
curvegen/: curve_generator.cpp  curve_generator.h  gen_tests.cpp
data/: input4_1.txt  input4_2.txt  line1.dtw  rand1.dtw  rand2.dtw  rand3.dtw  rand4.dtw  rand5.dtw  rand6.dtw  rand7.dtw  t1.txt  t2.txt  t3.dtw  t4.txt  t5.dtw
data/GeoLife/005/: 20090113112028.txt  20090115231952.txt  20090117085128.txt  20090119101553.txt  20090119101553_s1.txt  20090119101553_s2.txt  20090208045522.txt  20090208045522_translated.txt  20090208045522_translated_1.txt
results/: affineSin.m  compressCurve.m  disp_curves.m  drawCurves.asv  drawCurves.m  plotAlignment.m  rect_vis.txt  rects1.txt  rects2.txt  rects_input4.txt  rects_input4_align.txt  rects_input4_exact_align.txt  rects_input4_exact_frechet_align.txt  rects_line_1_2.txt  rects_rand_3_4.txt  rects_rand_3_7.txt  rects_rand_3_7_align.txt  rects_rand_3_7_approx_frechet_align.txt  rects_rand_3_7_exact_align.txt  rects_rand_5_6.txt  rects_rand_5_6_align.txt  rects_rand_5_6_approx_frechet_align.txt  rects_rand_5_6_exact_align.txt  rects_rand_5_6_exact_frechet_align.txt  rects_rand_lin_1_2.txt  rects_simple.txt  samplePerturbedCurve.m  underlyingParamCurves.m  visualizeRectValues.m  visualizeRects.m
results/figs/: effect_eps.fig  input3_approx_DP_surf.fig  input4_approx_DP_surf.fig  near_linear_curves.fig  parallel_lines_1_2.fig  parallel_lines_1_2_approx_DP_surf.fig  projection_sin_curve.fig  rectangles_rand_curves_3_4.fig  rectangles_rand_curves_3_4_new.fig  rectangles_rand_curves_3_7_alignments.fig  rectangles_rand_curves_3_7_new.fig  rectangles_rand_curves_5_6_alignments.fig  rectangles_rand_curves_5_6_new.fig  underlying_parametric_curve_perturbed.fig
results/figs/surf/: input3.fig  input3_approx_DP_surf_eps=1.fig  input3_approx_DP_surf_eps=3E-1.fig  input3_approx_DP_surf_eps=5E-1.fig  input4.fig  input4_approx_DP_surf_eps=1.fig  input4_approx_DP_surf_eps=3E-1.fig  input4_approx_DP_surf_eps=5E-1.fig  input_trajectory1.fig  input_trajectory2.fig  trajectory1_DP_surf.fig  trajectory1_approx_DP_surf_eps=1.fig  trajectory1_approx_DP_surf_eps=3E-1.fig  trajectory1_approx_DP_surf_eps=5E-1.fig  trajectory2_approx_DP_surf_eps=1.fig  trajectory2_approx_DP_surf_eps=5E-1.fig
results/trajectories/: 20090119101553_20090115231952.txt  20090119101553_20090115231952_approx_align.txt  20090119101553_20090115231952_exact_align.txt  20090119101553_20090208045522.txt  20090119101553_20090208045522_approx_align.txt  20090119101553_20090208045522_exact_align.txt  20090119101553_20090208045522_translated.txt  20090119101553_20090208045522_translated_1.txt  20090119101553_20090208045522_translated_1_approx_align.txt  20090119101553_20090208045522_translated_1_exact_align.txt  20090119101553_20090208045522_translated_approx_align.txt  20090119101553_s1_s2.txt  20090119101553_s1_s2_approx_align.txt
results/trajectories/figs/: 20090119101553_20090115231952.fig
tests/: line2.dtw  rand1.dtw  rand2.dtw  rect_cluster_test.cpp  rect_shortest_path_test.cpp  sequential_wspd_test.cpp  t1.dtw  t2.dtw  t3.dtw  t4.dtw  t6.dtw
util/: joiner.h
